<resources>
    <string name="overlay"><u>Click to enable Draw Overlays</u>.</string>
    <string name="usage"><u>Click to enable Permit Usage</u>.</string>
    <string name="disclaimerTitle">Disclaimer</string>
    <string name="disclaimerPointOne">1. It is impossible to use non-whitelisted applications while blocking your device with Dull Phone. The app has not been officially tested on wearable or tablet devices and may contain bugs in general.</string>
    <string name="disclaimerPointTwo">2. If the block timer has not finished, the only way to unblock your device is by enabling tap to unlock and clicking the screen a certain number of times.</string>
    <string name="disclaimerPointThree">3. The app requires the \'Can Draw Overlays\' and \'Permit Usage Access\' permissions for the block overlay to function. The usage data will only be used by the app locally when the block is turned on. The app has zero analytics or telemetry.</string>
    <string name="disclaimerPointFour">4. Dull Phone falls under the GPLv3 license. No liability caused by the misuse or malfunctioning of the Dull Phone application shall be placed on the developer. </string>
    <string name="disclaimerButton">I Accept</string>
    <string name="timerColon">:</string>
    <string name="confirmationPopupTitle">Block Phone For</string>
    <string name="cancelBlock">Cancel block</string>
    <string name="confirmBlock">Confirm block</string>
    <string name="screenOverlayPermissionTitle">Screen overlay missing</string>
    <string name="screenOverlayPermissionText"><![CDATA[To change this permission, you must enable the \'Allow display over other apps\' in Settings > Apps]]></string>
    <string name="settingsLink">Open Settings</string>
    <string name="usageAccessOverlayPermissionTitle">Usage access missing</string>
    <string name="usageAccessOverlayPermissionText"><![CDATA[To change this permission, you must enable the \'Permit usage access\' in Settings > Apps]]></string>
    <string name="helperButtonDescription">View early block removal guide</string>
    <string name="hoursToolTip">Hours</string>
    <string name="minutesToolTip">Minutes</string>
    <string name="secondsToolTip">Seconds</string>
    <string name="blockerImageDescription">Dull Phone skull</string>
    <string name="startMenuTitle">Remove distractions</string>
    <string name="confirmButtonText">Block Device</string>
    <string name="tapCounterHelper">Taps left to unblock: 2500</string>
    <string name="appsImageButtonText">See whitelisted apps</string>
    <string name="clickToggleImageButtonText">Enable alternative exit</string>
    <string name="phoneImageButtonText">Open the phone app</string>
    <string name="whiteListNestedScrollViewText">View whitelisted apps</string>
    <string name="whitelistAppButtonText">Whitelist app list</string>
    <string name="whiteListDialogTitle">Tap to allow</string>
    <string name="listOfApps">List of apps</string>
    <string name="ac_start_block">Start Block</string>
    <string name="ac_settings">Settings</string>
    <string name="at_block_distractions">Block Distractions</string>
    <string name="at_set_time">Set Time</string>
    <string name="at_whitelist">Whitelist</string>
    <string name="ac_edit">Edit</string>
    <string name="at_select_allowed_apps">Select Allowed Apps</string>
    <string name="ac_app_image">App Image</string>
    <string name="at_settings">Settings</string>
    <string name="ac_app_icon">App Icon</string>
    <string name="at_cancel">Cancel</string>
    <string name="at_confirm">Confirm</string>
    <string name="at_icon">Icon</string>
    <string name="ac_arrow_back">Arrow Back</string>
    <string name="at_tap_vibration">Tap Vibration</string>
    <string name="ac_dullphone_icon">DullPhone Icon</string>
    <string name="ac_skull_icon">Skull Icon</string>
    <string name="ac_fire_icon">Fire Icon</string>
    <string name="ac_whitelist_toggle">Whitelist Toggle</string>
    <string name="ac_vibration_toggle">Vibration Toggle</string>
    <string name="ac_row_image_1">Row Image 1</string>
    <string name="ac_row_image_2">Row Image 2</string>
    <string name="ac_row_image_3">Row Image 3</string>
    <string name="ac_row_image_4">Row Image 4</string>
    <string name="ac_row_image_5">Row Image 5</string>
    <string name="ac_row_image_6">Row Image 6</string>
    <string name="at_close">Close</string>
    <string name="at_screen_time">Screen Time</string>
    <string name="at_block_whitelist">Block Whitelist</string>
    <string name="at_midnight">00:00</string>
    <string name="at_whitelist_active">Whitelist Active</string>
    <string name="at_midnight_2">24:00</string>
</resources>