<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/spacing_normal">

    <ImageView
        app:layout_constraintDimensionRatio="1:1"
        android:id="@+id/iv_1"
        android:layout_width="@dimen/primary_button_width_normal"
        android:layout_height="@dimen/primary_button_width_normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/ac_row_image_1"/>

    <ImageView
        app:layout_constraintDimensionRatio="1:1"
        android:id="@+id/iv_2"
        android:layout_width="@dimen/primary_button_width_normal"
        android:layout_height="@dimen/primary_button_width_normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_1"
        app:layout_constraintEnd_toStartOf="@+id/iv_3"
        android:contentDescription="@string/ac_row_image_2"/>

    <ImageView
        app:layout_constraintDimensionRatio="1:1"
        android:id="@+id/iv_3"
        android:layout_width="@dimen/primary_button_width_normal"
        android:layout_height="@dimen/primary_button_width_normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/ac_row_image_3"/>

</androidx.constraintlayout.widget.ConstraintLayout>