<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/dullphone_fragment_normal"
    android:padding="0dp">

    <LinearLayout
        android:id="@+id/ll_back"
        android:layout_width="@dimen/secondary_button_width_normal"
        android:layout_height="@dimen/secondary_button_width_normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginStart="@dimen/spacing_normal">

        <ImageButton
            android:id="@+id/ib_back"
            style="@style/dullphone_secondary_button"
            android:background="@drawable/icon_arrow_back"
            android:contentDescription="@string/ac_arrow_back"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_title"
        style="@style/dullphone_start_menu_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/ll_back"
        app:layout_constraintBottom_toBottomOf="@id/ll_back"
        app:layout_constraintStart_toEndOf="@id/ll_back"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:text="@string/at_select_allowed_apps"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ncv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ll_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_normal"
        android:contentDescription="@string/at_whitelist">

        <LinearLayout
            android:id="@+id/ll"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>