<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/dullphone_fragment_normal">

    <TextView
        android:id="@+id/tv_title_time"
        style="@style/dullphone_start_menu_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/ll_settings"
        app:layout_constraintBottom_toBottomOf="@id/ll_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ll_settings"
        android:text="@string/at_set_time"/>

    <LinearLayout
        android:id="@+id/ll_settings"
        android:layout_width="@dimen/secondary_button_width_normal"
        android:layout_height="@dimen/secondary_button_width_normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_title_time"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/ib_settings"
            style="@style/dullphone_secondary_button"
            android:background="@drawable/icon_settings"
            android:contentDescription="@string/ac_settings"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_time_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_normal">

        <NumberPicker
            android:id="@+id/np_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_colon1"/>

        <TextView
            android:id="@+id/tv_colon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/np_day"
            app:layout_constraintEnd_toStartOf="@id/np_hour"
            android:layout_marginHorizontal="@dimen/spacing_normal"
            android:text="@string/timerColon"/>

        <NumberPicker
            android:id="@+id/np_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_colon1"
            app:layout_constraintEnd_toStartOf="@id/tv_colon2"/>

        <TextView
            android:id="@+id/tv_colon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/np_hour"
            app:layout_constraintEnd_toStartOf="@id/np_minute"
            android:layout_marginHorizontal="@dimen/spacing_normal"
            android:text="@string/timerColon"/>

        <NumberPicker
            android:id="@+id/np_minute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_colon2"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_title_whitelist"
        style="@style/dullphone_start_menu_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/ll_edit"
        app:layout_constraintBottom_toBottomOf="@id/ll_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ll_edit"
        android:text="@string/at_whitelist"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ncv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_whitelist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/spacing_normal"
        android:contentDescription="@string/at_whitelist">

        <LinearLayout
            android:id="@+id/ll"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ll_edit"
        android:layout_width="@dimen/secondary_button_width_normal"
        android:layout_height="@dimen/secondary_button_width_normal"
        app:layout_constraintTop_toBottomOf="@id/cl_time_selector"
        app:layout_constraintStart_toEndOf="@id/tv_title_whitelist"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_normal">

        <ImageButton
            android:id="@+id/ib_edit"
            style="@style/dullphone_secondary_button"
            android:background="@drawable/icon_edit"
            android:contentDescription="@string/ac_edit"/>

    </LinearLayout>


    <ImageButton
        android:id="@+id/ib_start"
        android:layout_width="@dimen/primary_button_width_normal"
        android:layout_height="@dimen/primary_button_width_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/icon_play_arrow_background"
        android:contentDescription="@string/ac_start_block"/>

</androidx.constraintlayout.widget.ConstraintLayout>