<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/black">

    <TextView
        android:id="@+id/titleTextView"
        style="@style/TitleText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/appsImageButton"
        android:padding="0dp"
        android:gravity="center_vertical"
        android:text="@string/startMenuTitle"/>

    <ImageButton
        android:id="@+id/appsImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="9dp"
        android:background="@drawable/icon_app_whitelist"
        android:contentDescription="@string/whitelistAppButtonText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timeSelectorLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintBottom_toTopOf="@id/confirmBlockButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="28dp">

        <NumberPicker
            android:id="@+id/dayNumberPicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/colonTextView1"/>

        <TextView
            android:id="@+id/colonTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/dayNumberPicker"
            app:layout_constraintEnd_toStartOf="@id/hourNumberPicker"
            android:layout_marginHorizontal="5dp"
            android:text="@string/timerColon"/>

        <NumberPicker
            android:id="@+id/hourNumberPicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/colonTextView1"
            app:layout_constraintEnd_toStartOf="@id/colonTextView2"/>

        <TextView
            android:id="@+id/colonTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/hourNumberPicker"
            app:layout_constraintEnd_toStartOf="@id/minuteNumberPicker"
            android:layout_marginHorizontal="5dp"
            android:text="@string/timerColon"/>

        <NumberPicker
            android:id="@+id/minuteNumberPicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/colonTextView2"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmBlockButton"
        android:theme="@style/SavageBlockerButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_background"
        android:text="@string/confirmButtonText"/>

</androidx.constraintlayout.widget.ConstraintLayout>